-- Countries table
CREATE TABLE public.countries (
    id          INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name        VARCHAR(256) NOT NULL,
    minute_cost DOUBLE PRECISION NOT NULL
);

-- Rates table
CREATE TABLE public.rates (
    id   INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    cost DOUBLE PRECISION NOT NULL
);

-- Cities table
CREATE TABLE public.cities (
    id         INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name       VARCHAR(256) NOT NULL,
    zip_code   VARCHAR(50) NOT NULL,
    country_id INTEGER NOT NULL REFERENCES public.countries(id)
);

-- Categories table
CREATE TABLE public.categories (
    id            INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name          VARCHAR(256) NOT NULL,
    discount_mtp  DOUBLE PRECISION NOT NULL,
    rate_id       INTEGER NOT NULL REFERENCES public.rates(id)
);

-- Customers table
CREATE TABLE public.customers (
    id          INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    fullname    VARCHAR(128) NOT NULL,
    passport    VARCHAR(11) NOT NULL UNIQUE,
    city_id     INTEGER NOT NULL REFERENCES public.cities(id),
    category_id INTEGER NOT NULL REFERENCES public.categories(id)
);

-- Phone numbers table
CREATE TABLE public.phone_numbers (
    id          INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    number      VARCHAR(15) NOT NULL UNIQUE,
    customer_id INTEGER NOT NULL REFERENCES public.customers(id)
);

-- Calls table
CREATE TABLE public.calls (
    id               INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    from_customer_id  INTEGER NOT NULL REFERENCES public.customers(id),
    to_customer_id    INTEGER NOT NULL REFERENCES public.customers(id),
    duration          DOUBLE PRECISION NOT NULL,
    started_at        TIMESTAMP WITH TIME ZONE NOT NULL,
    finished_at       TIMESTAMP WITH TIME ZONE,
    charge            DOUBLE PRECISION NOT NULL,
    status            call_status NOT NULL
);

-- Admins table
CREATE TABLE public.admins (
    id         INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    username   VARCHAR(32) NOT NULL UNIQUE,
    password   VARCHAR(256) NOT NULL,
    created_at TIMESTAMP WITH TIME ZONE NOT NULL
);

-- Payments table
CREATE TABLE public.payments (
    id          INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    amount      DOUBLE PRECISION NOT NULL,
    customer_id INTEGER NOT NULL REFERENCES public.customers(id),
    status      payment_status NOT NULL,
    created_at  TIMESTAMP WITH TIME ZONE NOT NULL,
    updated_at  TIMESTAMP WITH TIME ZONE
);
